# Take-away-Algorithm

./: CMakeLists.txt  Gauss.csv  Gauss.txt  MersenneTwister.h  PoissonSampling.cpp  PoissonSampling.h  README.md  RandMap.cpp  RandMap.h  Take-away Algorithm.cpp  Take-away Algorithm.sln  Take-away Algorithm.vcxproj  Take-away Algorithm.vcxproj.filters  build.bat  gen_map.cpp  plot.py  report.md
Debug/: Take-away Algorithm.exe.recipe  Take-away Algorithm.ilk  Take-away Algorithm.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Take-awa.ecc3240d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Take-away Algorithm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
exec/: gen_map.cpp
src/: MersenneTwister.h  PoissonSampling.cpp  PoissonSampling.h  RandMap.cpp  RandMap.h
src/map/: MersenneTwister.cpp  RandMap.cpp  RandMap.hpp
src/rand/: MersenneTwister.cpp  MersenneTwister.hpp  PoissonSampling.cpp  PoissonSampling.hpp
src/zone/: zone.cpp  zone.hpp
